added party pics html java etc

--- a/WebContent/WEB-INF/templates/includes/menu.html
+++ b/WebContent/WEB-INF/templates/includes/menu.html
@@ -37,6 +37,20 @@
 						method="post">
 						<input type="submit" value="Flat" style="color: white; border-style:none; background-color:transparent;" />
 					</form></li>
+					
+					<li class="list-group-item" style="background-color:#1C1C1C;"><form th:action="@{/showUserProfile}"
+						method="post">
+						<input type="submit" value="Profile" style="color: white; border-style:none; background-color:transparent;" />
+					</form></li>
+					
+					
+					<li class="list-group-item" style="background-color:#1C1C1C;"><form th:action="@{/showPartyImg}"
+						method="post">
+						<input type="submit" value="Party Pics" style="color: white; border-style:none; background-color:transparent;" />
+					</form></li>
+					
+					
+					
 			</ul>
 
 
