--- a/WebContent/WEB-INF/templates/includes/footer.html
+++ b/WebContent/WEB-INF/templates/includes/footer.html
@@ -10,6 +10,10 @@
 
 <nav th:fragment="footer" class="navbar navbar-inverse navbar-fixed-bottom">
 	<div class="container-fluid" >
-          <form class="navbar-form navbar-center"><p style="color:white;">&copy; 2018 Die Eierbären</p></form>
+          <form class="navbar-form navbar-left"><p style="color:white;">&copy; 2018 Die Eierbären</p></form>
+          
+         <form class="navbar-form navbar-right"><a style="color:white;" th:href="@{/about}">About</a></form>
+          
+          
     </div>
 </nav>
