--- a/WebContent/WEB-INF/templates/listUsers.html
+++ b/WebContent/WEB-INF/templates/listUsers.html
@@ -96,6 +96,13 @@
 									<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
 									Upload
 								</button></a>
+								<a sec:authorize="hasRole('ADMIN')" th:href="@{/changeUser(id=${user.id})}"><button type="button" class="btn btn-xs btn-warning">
+									<span class="glyphicon glyphicon-cog" aria-hidden="true"></span>
+									Edit
+								</button></a>
+								
+								
+								
 								<a sec:authorize="hasRole('ADMIN')" th:href="@{/deleteUser(id=${user.id})}"><button type="button" class="btn btn-xs btn-danger">
 									<span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
 									Delete
