some hardcore redesign is going on - looking gooooood <3

--- a/WebContent/WEB-INF/templates/includes/bootstrap.html
+++ b/WebContent/WEB-INF/templates/includes/bootstrap.html
@@ -2,15 +2,15 @@
 
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet"
-		href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-		integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-		crossorigin="anonymous">
+		href="https://unpkg.com/@coreui/coreui/dist/css/coreui.min.css">
 
-	<!-- Optional theme -->
+
+
+	<!-- Optional theme 
 	<link rel="stylesheet"
 		href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
 		integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp"
-		crossorigin="anonymous">
+		crossorigin="anonymous">-->
 
 
 	<!-- Latest compiled and minified CSS -->
@@ -95,31 +95,19 @@ body {
 	<!-- Bootstrap core JavaScript
     ================================================== -->
 	<!-- Placed at the end of the document so the pages load faster -->
-	<script
-		src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-
-	<!-- Latest compiled and minified JavaScript -->
-	<script
-		src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
-		integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+	<script src="http://code.jquery.com/jquery-3.3.1.min.js"
+		integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
 		crossorigin="anonymous"></script>
-
-	<!-- Latest compiled and minified JavaScript -->
 	<script
-		src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.12.1/bootstrap-table.min.js"></script>
-
-	<script type="text/javascript">
-
-		$(function () {
-		    $('.tree li').on('click', function (e) {
-		        var children = $(this).find('> ul > li');
-		        if (children.is(":visible")) children.hide('fast');
-		        else children.show('fast');
-		        e.stopPropagation();
-		    });
-		});
-	
-	</script>
+		src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+		integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+		crossorigin="anonymous"></script>
+	<script
+		src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"
+		integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm"
+		crossorigin="anonymous"></script>
+	<script src="https://unpkg.com/@coreui/coreui/dist/js/coreui.min.js"></script>
+	Ï
 
 
 </div>
