--- a/WebContent/WEB-INF/templates/includes/footer.html
+++ b/WebContent/WEB-INF/templates/includes/footer.html
@@ -1,15 +1,5 @@
-<head>
-	<style>
-	
-	p {	color:white; 
-		text-align:center;}
-	
-	</style>
-	
-</head>
-
-<nav th:fragment="footer" class="navbar navbar-inverse navbar-fixed-bottom">
-	<div class="container-fluid" >
-          <form class="navbar-form navbar-center"><p style="color:white;">&copy; 2018 Die Eierbären</p></form>
+<div th:fragment="footer">
+	<div class="navbar" >
+          <form class="navbar-form navbar-center"><p >&copy; 2018 Die Eierbären</p></form>
     </div>
 </nav>
