--- a/WebContent/WEB-INF/templates/includes/menu.html
+++ b/WebContent/WEB-INF/templates/includes/menu.html
@@ -9,9 +9,9 @@
 		<div class="card-body">
 
 			<ul class="list-group list-group-flush">
-				<li class="list-group-item" style="background-color:#1C1C1C;"><form 
+				<li class="list-group-item"><form 
 						th:action="@{/showGroceryList}" method="post">
-						<input id="liste" type="submit" value="Grocery" style="color: white; border-style:none; background-color:transparent;" />
+						<input id="liste" type="submit" value="Grocery"  />
 					</form></li>
 				<li class="list-group-item" style="background-color:#1C1C1C;"><form th:action="@{/listComments}"
 						method="post">
@@ -49,7 +49,10 @@
 						<input type="submit" value="Party Pics" style="color: white; border-style:none; background-color:transparent;" />
 					</form></li>
 					
-					
+					<li class="list-group-item" style="background-color:#1C1C1C;"><form th:action="@{/test}"
+						method="post">
+						<input type="submit" value="test" style="color: white; border-style:none; background-color:transparent;" />
+					</form></li>
 					
 			</ul>
 
