--- a/WebContent/WEB-INF/templates/listComments.html
+++ b/WebContent/WEB-INF/templates/listComments.html
@@ -7,15 +7,62 @@
 <title>COMMUNE-IC8</title>
 <div th:replace="~{includes/bootstrap :: bootstrapCSS}" />
 </head>
-<body>
-	<div class="container-fluid" role="main">
 
-		<div class="page-header">
-		<h1 align="center">Comments</h1>
-			<nav th:replace="~{includes/searchNav :: search}"></nav>
-		</div>
+<body class="app sidebar-show aside-menu-show">
+  <header class="app-header navbar" >
+  
+<!---------------------------HEADER CONTENT --------------------------------------->
+    <div class="container-fluid">
 
-		<!--  Error message ----------------------------------------------------------- -->
+			<form>
+				<a style="font-size:200%;" th:href="@{/}"> COMMUNE-IC8</a>		
+			</form>
+	
+
+		<!-- HTML form with search textbox and submit button-->
+		<form role="search" method="post"
+			action="searchUsers">
+			<div class="input-group">
+				<input type="text" class="form-control" placeholder="Search for..."
+					name="searchString"> <span class="input-group-btn">
+					<button class="btn btn-default" type="submit">Go!</button>
+				</span>
+			</div>
+		</form>
+		
+		
+		<form th:action="@{/logout}"
+			method="post">
+			<input class="btn btn-danger" type="submit" value="Sign Out" />
+		</form>	
+
+
+	</div>
+    
+  </header>
+<!---------------------------HEADER CONTENT --------------------------------------->
+  
+  
+  
+  
+<!---------------------------SIDEBAR CONTENT --------------------------------------->
+  
+  <div class="app-body">
+    <div class="sidebar">
+      <!-- Sidebar content here -->
+
+     <div th:include="~{includes/sidebar :: sidebar}"></div>
+     
+    </div>
+<!---------------------------SIDEBAR CONTENT --------------------------------------->
+    
+    
+
+ <!---------------------------MAIN CONTENT --------------------------------------->
+    <main class="main">
+      <!-- Main content here -->
+      
+      <!--  Error message ----------------------------------------------------------- -->
 		<div th:unless="${errorMessage} == null" th:utext="${errorMessage}"
 			class="alert alert-danger" role="alert"></div>
 		<!--  Error message ----------------------------------------------------------- -->
@@ -30,70 +77,100 @@
 		<div th:unless="${message} == null" th:utext="${message}"
 			class="alert alert-success" role="warning"></div>
 		<!--   message ----------------------------------------------------------- -->
-
-		<!-- Menu------------------------------------------------------------------ -->
-		<div class="col-sm-1">
-			<div th:replace="~{includes/menu :: menu}"></div>
-		</div>
-		<!-- Menu------------------------------------------------------------------ -->
-		
-		
-		<!--  Edit Grocery----------------------------------------------------------- -->
-		<div class="col-md-3 col-md-offset-1">
-
-			<form sec:authorize="hasRole('USER')" th:action="@{/addComment}"
-				method="post" style="float: left;">
-				<input class="btn btn-default" type="submit" value="Add Comment" />			
-			</form>
-			<form th:action="@{/commentsPdf}" method="post" style="float: left;">
-				<input class="btn btn-default" type="submit" name ="pdf" value="PDF">
-			</form>
-			<form th:action="@{/commentsExcel}" method="post" style="float: left;">
-				<input class="btn btn-default" type="submit" name ="excel" value="Excel">
-
-			</form>
-		</div>
-		<!--  Edit Grocery----------------------------------------------------------- -->
-
-
-
-		<!-- Right Dynamic Content------------------------------------------------------- -->
-		<div class="col-md-10 col-md-offset-1">
-
-			<table data-toggle="table" class="table table-striped">
+      	
+      	<div><h1>Comment Section</h1></div>
+      	
+      	
+      	<div>
+      		<table data-toggle="table" class="table table-striped">
 				<thead>
+
 					<tr>
-						
 						<th data-sortable="true">User</th>
 						<th data-sortable="true">Date</th>
-						<th data-sortable="true">Text</th>
+						<th data-sortable="true">Text</th>	
+						<th sec:authorize="hasRole('ADMIN')">Actions</th>
 
 					</tr>
 				</thead>
+
 				<tbody>
 					<!--  list all items ----------------------------------------------------------- -->
+
 					<tr th:each="comment : ${comments}">
 						
 						<td th:text="${comment.getUser().getFirstname() + ' ' + comment.getUser().getLastname()}"></td>
 						<td th:text="${comment.date}"></td>
 						<td th:text="${comment.text}"></td>
 						
-						<!-- <td><a sec:authorize="hasRole('ADMIN')" th:href="@{/delete(id=${employee.id})}">Delete</a></td> -->
-
+						
+<!-- 
+						<td sec:authorize="hasRole('ADMIN')"><a
+							th:href="@{/changeComment(id=${comment.id})}"
+							class="btn btn-xs btn-success"> <span
+								class="glyphicon glyphicon-edit" aria-hidden="true"></span> Edit
+						</a> <a th:href="@{/deleteComment(id=${comment.id})}"
+							class="btn btn-xs btn-danger"> <span
+								class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+								Delete
+						</a></td>
 					</tr>
+					 -->
 					<!--  list all items ----------------------------------------------------------- -->
 				</tbody>
 			</table>
+      	</div>
+      	
+    </main>
+ <!---------------------------MAIN CONTENT --------------------------------------->
 
-		</div>
-		<!-- Right Dynamic Content------------------------------------------------------- -->
-	</div>
-	
-	
-	
-	</div>
-	<!--  End of container -->
-	<div th:replace="~{includes/bootstrap :: bootstrapJS}" />
-	<div th:replace="~{includes/footer :: footer}" />
+    
+    
+ <!---------------------------RIGHT-SIDEBAR --------------------------------------->
+    
+    <aside class="aside-menu">
+      <!-- Aside menu content here -->
+      <!-- -----------------Edit / PDF / Excel Buttons -------------------------- -->
+      	<div class="sidebar">
+		<nav class="sidebar-nav">
+		<ul class="nav">
+			<li class="nav-title">Options</li>
+
+			<li sec:authorize="hasRole('USER')" class="nav-item"><a class="nav-link"
+				th:href="@{/addComment}"> <i
+					class="nav-icon cui-speedometer"></i> Add Comment
+			</a></li>
+		
+
+			<li sec:authorize="hasRole('USER')" class="nav-item"><a class="nav-link"
+				th:href="@{/commentsPdf}"> <i
+					class="nav-icon cui-speedometer"></i> Export PDF
+			</a></li>
+			
+			<li sec:authorize="hasRole('USER')" class="nav-item"><a class="nav-link"
+				th:href="@{/commentsExcel}"> <i
+					class="nav-icon cui-speedometer"></i> Export Excel
+			</a></li>
+
+			
+			</ul></nav>
+     
+    </div>
+    
+    
+    
+    </aside>
+  </div>
+ <!---------------------------RIGHT-SIDEBAR --------------------------------------->
+
+  
+  <!---------------------------FOOTER --------------------------------------->
+ 
+  <footer class="app-footer">
+    <!-- Footer content here -->
+    <div th:include="~{includes/footer :: footer}"></div>
+  </footer>
+  
+  	<div th:replace="~{includes/bootstrap :: bootstrapJS}" />
+  	
 </body>
-</html>
