--- a/WebContent/WEB-INF/templates/listFlat.html
+++ b/WebContent/WEB-INF/templates/listFlat.html
@@ -7,17 +7,62 @@
 <title>COMMUNE-IC8</title>
 <div th:replace="~{includes/bootstrap :: bootstrapCSS}" />
 </head>
-<body>
-	<div class="container-fluid" role="main">
 
-		<div class="page-header">
+<body class="app sidebar-show aside-menu-show">
+  <header class="app-header navbar" >
+  
+<!---------------------------HEADER CONTENT --------------------------------------->
+    <div class="container-fluid">
 
-			<h1 align="center">Flat</h1>
-			<nav th:replace="~{includes/searchNav :: search}"></nav>
-		</div>
+			<form>
+				<a style="font-size:200%;" th:href="@{/}"> COMMUNE-IC8</a>		
+			</form>
+	
+
+		<!-- HTML form with search textbox and submit button-->
+		<form role="search" method="post"
+			action="searchUsers">
+			<div class="input-group">
+				<input type="text" class="form-control" placeholder="Search for..."
+					name="searchString"> <span class="input-group-btn">
+					<button class="btn btn-default" type="submit">Go!</button>
+				</span>
+			</div>
+		</form>
+		
+		
+		<form th:action="@{/logout}"
+			method="post">
+			<input class="btn btn-danger" type="submit" value="Sign Out" />
+		</form>	
 
 
-		<!--  Error message ----------------------------------------------------------- -->
+	</div>
+    
+  </header>
+<!---------------------------HEADER CONTENT --------------------------------------->
+  
+  
+  
+  
+<!---------------------------SIDEBAR CONTENT --------------------------------------->
+  
+  <div class="app-body">
+    <div class="sidebar">
+      <!-- Sidebar content here -->
+
+     <div th:include="~{includes/sidebar :: sidebar}"></div>
+     
+    </div>
+<!---------------------------SIDEBAR CONTENT --------------------------------------->
+    
+    
+
+ <!---------------------------MAIN CONTENT --------------------------------------->
+    <main class="main">
+      <!-- Main content here -->
+      
+      <!--  Error message ----------------------------------------------------------- -->
 		<div th:unless="${errorMessage} == null" th:utext="${errorMessage}"
 			class="alert alert-danger" role="alert"></div>
 		<!--  Error message ----------------------------------------------------------- -->
@@ -32,83 +77,91 @@
 		<div th:unless="${message} == null" th:utext="${message}"
 			class="alert alert-success" role="warning"></div>
 		<!--   message ----------------------------------------------------------- -->
-
-
-		<div class="col-sm-1">
-			<div th:replace="~{includes/menu :: menu}"></div>
-		</div>
-
-		<!--  Add Flat----------------------------------------------------------- -->
-		<div class="col-md-2 col-md-offset-1">
-
-			<form sec:authorize="hasRole('USER')" th:action="@{/editFlat}"
-				method="post">
-				<input class="btn btn-default" type="submit" value="Add Flat" style="float:left;"/>
-			</form>
-			<form th:action="@{/report}" method="post">
-				<input class="btn btn-default" type="submit" value="PDF" style="float:left;">
-			</form>
-			
-		</div>
-		<!--  Add Flat----------------------------------------------------------- -->
-
-
-
-
-		<div class="col-md-10 col-md-offset-1">
-			<table data-toggle="table" class="table table-striped">
+      	
+      	<div><h1>Flat</h1></div>
+      	
+      	
+      	<div>
+      		<table data-toggle="table" class="table table-striped">
 				<thead>
 
 					<tr>
-						<th data-sortable="true">ID</th>
-						<th data-sortable="true">Flat</th>
-						<th data-sortable="true">User</th>
+						<th data-sortable="true">Flatname</th>
+						<th data-sortable="true">User</th>			
 						<th sec:authorize="hasRole('ADMIN')">Actions</th>
-
-
 
 					</tr>
 				</thead>
-
 
 				<tbody>
 					<!--  list all items ----------------------------------------------------------- -->
 
 					<tr th:each="flat : ${flats}">
-						<td th:text="${flat.id}"></td>
-						<td th:text="${flat.name}"></td>
-
+						<td th:text="flat.name"></td>
 						<td >
 						<ul> 
 						<li th:each=" user: ${flat.getUsers()}" th:text= "${user.firstname} + ' '+ ${user.lastname} "></li>
 						</ul></td>
+						
 
-
+						<!-- <td><a sec:authorize="hasRole('ADMIN')" th:href="@{/delete(id=${employee.id})}">Delete</a></td> -->
 						<td sec:authorize="hasRole('ADMIN')"><a
 							th:href="@{/changeFlat(id=${flat.id})}"
 							class="btn btn-xs btn-success"> <span
 								class="glyphicon glyphicon-edit" aria-hidden="true"></span> Edit
-						</a> <a th:href="@{/delete(id=${flat.id})}"
+						</a> <a th:href="@{/deleteFlat(id=${flat.id})}"
 							class="btn btn-xs btn-danger"> <span
 								class="glyphicon glyphicon-trash" aria-hidden="true"></span>
 								Delete
-
-						</a></td>		
-
-		
-	</div>
+						</a></td>
 
 
-		</div>
-		<!-- Right Dynamic Content------------------------------------------------------- -->
-	</div>
-	
-	
-	
-	</div>
 
-	<!--  End of container -->
-	<div th:replace="~{includes/bootstrap :: bootstrapJS}" />
-	<div th:replace="~{includes/footer :: footer}" />
+
+					</tr>
+					<!--  list all items ----------------------------------------------------------- -->
+				</tbody>
+			</table>
+      	</div>
+      	
+    </main>
+ <!---------------------------MAIN CONTENT --------------------------------------->
+
+    
+    
+ <!---------------------------RIGHT-SIDEBAR --------------------------------------->
+    
+    <aside class="aside-menu">
+      <!-- Aside menu content here -->
+      <!-- -----------------Edit / PDF / Excel Buttons -------------------------- -->
+      	<div class="sidebar">
+		<nav class="sidebar-nav">
+		<ul class="nav">
+			<li class="nav-title">Options</li>
+
+			<li sec:authorize="hasRole('USER')" class="nav-item"><a class="nav-link"
+				th:href="@{/editUser}"> <i
+					class="nav-icon cui-speedometer"></i> Create New Flat
+			</a></li>
+			
+			</ul></nav>
+     
+    </div>
+    
+    
+    
+    </aside>
+  </div>
+ <!---------------------------RIGHT-SIDEBAR --------------------------------------->
+
+  
+  <!---------------------------FOOTER --------------------------------------->
+ 
+  <footer class="app-footer">
+    <!-- Footer content here -->
+    <div th:include="~{includes/footer :: footer}"></div>
+  </footer>
+  
+  	<div th:replace="~{includes/bootstrap :: bootstrapJS}" />
+  	
 </body>
-</html>
