--- a/WebContent/WEB-INF/templates/showUserProfile.html
+++ b/WebContent/WEB-INF/templates/showUserProfile.html
@@ -58,7 +58,7 @@
 
 
 		<!-- hoedlale16: include some fancy footer -->
-		<footer th:replace="~{includes/fragments :: footer}"></footer>
+		<footer th:replace="~{includes/footer :: footer}"></footer>
 
 		<!--  End of container -->
 		<div th:include="~{includes/bootstrap :: bootstrapJS}" th:remove="tag" />
