added fanciest icons ever seen on this world

--- a/WebContent/WEB-INF/templates/includes/bootstrap.html
+++ b/WebContent/WEB-INF/templates/includes/bootstrap.html
@@ -3,6 +3,7 @@
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet"
 		href="https://unpkg.com/@coreui/coreui/dist/css/coreui.min.css">
+<link rel="stylesheet" href="https://unpkg.com/@coreui/icons/css/coreui-icons.min.css">
 
 
 
