--- a/WebContent/WEB-INF/templates/listUsers.html
+++ b/WebContent/WEB-INF/templates/listUsers.html
@@ -162,7 +162,7 @@
 
 			<li sec:authorize="hasRole('USER')" class="nav-item"><a class="nav-link"
 				th:href="@{/editUser}"> <i
-					class="nav-icon cui-speedometer"></i> Add User
+					class="nav-icon cui-user-follow"></i> Add User
 			</a></li>
 			
 			</ul></nav>
