added fanciest icons ever seen on this world

--- a/WebContent/WEB-INF/templates/listFlat.html
+++ b/WebContent/WEB-INF/templates/listFlat.html
@@ -144,7 +144,7 @@
 
 			<li sec:authorize="hasRole('USER')" class="nav-item"><a class="nav-link"
 				th:href="@{/editUser}"> <i
-					class="nav-icon cui-speedometer"></i> Create New Flat
+					class="nav-icon cui-location-pin"></i> Create New Flat
 			</a></li>
 			
 			</ul></nav>
