--- a/WebContent/WEB-INF/templates/listComments.html
+++ b/WebContent/WEB-INF/templates/listComments.html
@@ -138,18 +138,18 @@
 
 			<li sec:authorize="hasRole('USER')" class="nav-item"><a class="nav-link"
 				th:href="@{/addComment}"> <i
-					class="nav-icon cui-speedometer"></i> Add Comment
+					class="nav-icon cui-note"></i> Add Comment
 			</a></li>
 		
 
 			<li sec:authorize="hasRole('USER')" class="nav-item"><a class="nav-link"
 				th:href="@{/commentsPdf}" th:value="pdf"> <i
-					class="nav-icon cui-speedometer"></i> Export PDF
+					class="nav-icon cui-cloud-download"></i> Export PDF
 			</a></li>
 			
 			<li sec:authorize="hasRole('USER')" class="nav-item"><a class="nav-link"
 				th:href="@{/commentsExcel}" th:value="excel"> <i
-					class="nav-icon cui-speedometer"></i> Export Excel
+					class="nav-icon cui-cloud-download"></i> Export Excel
 			</a></li>
 
 			
