changed some align tags

--- a/WebContent/WEB-INF/templates/listComments.html
+++ b/WebContent/WEB-INF/templates/listComments.html
@@ -78,7 +78,7 @@
 			class="alert alert-success" role="warning"></div>
 		<!--   message ----------------------------------------------------------- -->
       	
-      	<div><h1>Comment Section</h1></div>
+      	<div><h1 align="center">Comment Section</h1></div>
       	
       	
       	<div>
