--- a/WebContent/WEB-INF/templates/listPartyPics.html
+++ b/WebContent/WEB-INF/templates/listPartyPics.html
@@ -78,7 +78,7 @@
 			class="alert alert-success" role="warning"></div>
 		<!--   message ----------------------------------------------------------- -->
       	
-      	<div><h1>Party Pics</h1></div>
+      	<div><h1 align="center">Party Pics</h1></div>
       	
       	
       	<div class="col-md-10 col-md-offset-1">
