--- a/WebContent/WEB-INF/templates/includes/bootstrap.html
+++ b/WebContent/WEB-INF/templates/includes/bootstrap.html
@@ -1,8 +1,7 @@
 <div th:fragment="bootstrapCSS">
 
 	<!-- Latest compiled and minified CSS -->
-	<link rel="stylesheet"
-		href="https://unpkg.com/@coreui/coreui/dist/css/coreui.min.css">
+	<link rel="stylesheet" href="https://unpkg.com/@coreui/coreui/dist/css/coreui.min.css">
 <link rel="stylesheet" href="https://unpkg.com/@coreui/icons/css/coreui-icons.min.css">
 
 
@@ -108,8 +107,7 @@ body {
 		integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm"
 		crossorigin="anonymous"></script>
 	<script src="https://unpkg.com/@coreui/coreui/dist/js/coreui.min.js"></script>
-	Ï
-
+	
 
 </div>
 
