--- a/WebContent/WEB-INF/templates/index.html
+++ b/WebContent/WEB-INF/templates/index.html
@@ -78,7 +78,7 @@
 			class="alert alert-success" role="warning"></div>
 		<!--   message ----------------------------------------------------------- -->
       	
-      	<div><h1>Home</h1></div>
+      	<div><h1 align="center">Home</h1></div>
       	
       	<p> Hello and welcome to your flat, du Eierbär! This place lets you organize your shared flat and helps you to COMMUNE-IC8 with your Flatmates!
 				Have an Appointment? No problem, just add id to the Todo list and the others will see it. Not enough Mayo in the refrigerator? Never mind, just add it to the grocery list so it wont be forgotten on the next shopping tour :P</p>
